--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -880,6 +880,7 @@ a:hover {
   border-radius: 1rem;
   margin-bottom: 3rem;
   text-align: center;
+  height: 325px;
 }
 
 .service-box:hover .ico-circle {
@@ -1519,7 +1520,7 @@ footer .credits a {
     opacity: 0;
     top: 100px;
   }
-  75% {
+  50% {
     opacity: 0.5;
     top: 0px;
   }
